--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         </div><!-- .flex-row.flex-center -->
 
                         <!-- The spans within the pre class helps keeps the texts in place for larger screens producing the same effects as <pre> tag as in PSD document -->
-                        <article id="author-intro" class="bre text-center-m">
+                        <article id="author-intro" class="text-center-m">
                             <p>Eigentümer:</p>
                             <p class="pre ff-magistral_book bre">
                                 <span class="ff-magistral_book">Thomas Schnadt, motorsportbegeistert</span>
