Added scrollToTop Button and Animated Banner Text

--- a/impressum.html
+++ b/impressum.html
@@ -9,7 +9,7 @@
         <meta name="og:site_name" content="Teav Racing" />
         <meta name="og:image" content="assets/images/car2.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="assets/css/main.css?v=1.3.9" />
+        <link rel="stylesheet" href="assets/css/main.css?v=1.3.11" />
         <link rel="stylesheet" href="assets/fonts/MagistralC-Bold.css" />
         <link rel="stylesheet" href="assets/fonts/AdobeInvisFont.css" />
         <link rel="stylesheet" href="assets/fonts/MyriadPro-Regular.css" />
@@ -513,5 +513,7 @@
                 <a class="back strip-underline-link mT-15" href="index.html" style="display:block;color: #eb6c10;background: #fff">« ZURÜCK</a>
             </div>
         </main>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/main.js"></script>
     </body><!-- #body -->
 </html> 
